Update 'mzokgdkbp-go' component image to: quay.io/jsmid/rhtap-qe:64afde02a4493e2ba11b29122854434bf45162f9@sha256:508fce6df6694238c682b25909123c1c3b7954fde125e5669ba06f10ee252849

--- a/components/mzokgdkbp-go/overlays/development/deployment-patch.yaml
+++ b/components/mzokgdkbp-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mzokgdkbp-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:64afde02a4493e2ba11b29122854434bf45162f9@sha256:508fce6df6694238c682b25909123c1c3b7954fde125e5669ba06f10ee252849
+          name: container-image
